Git Deployment Assignment/force-app/main/default/objects/developer1__c/developer1__c.object-meta.xml
<CustomObject>
    <description>This object stores the all the locations of an organization</description>
    <label>developer1</label>
    <nameField>
        <label>developer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>developer1s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>