Git Deployment Assignment/force-app/main/default/objects/developer1__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Calculates the age of the Manager</description>
    <formula>FLOOR((TODAY() -  BirthDate__c ) / 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>