Git Deployment Assignment/force-app/main/default/objects/developer1__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Location of the Developer</description>
    <label>Location</label>
    <referenceTo>Work_location__c</referenceTo>
    <relationshipLabel>developer1s</relationshipLabel>
    <relationshipName>developer1s</relationshipName>
    <type>Lookup</type>
</CustomField>