Git Deployment Assignment/force-app/main/default/objects/developer1__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Stores the Name of developer</description>
    <label>Name</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>