Git Deployment Assignment/force-app/main/default/objects/developer1__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <description>This field stores the Name of the manager to which the Developer Reports to</description>
    <label>Reporting Manager</label>
    <referenceTo>managers__c</referenceTo>
    <relationshipLabel>developer1s</relationshipLabel>
    <relationshipName>developer1s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>